--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -117,3 +117,22 @@
 
 .img-infografica__item, .img-infografica-b__item
   width: 5%
+
+.div-footer
+  border-bottom-left-radius: 0.7rem
+  border-bottom-right-radius: 0.7rem
+  background-color: #ABFFFF
+
+.lista-custom
+  i
+    display: inline-block
+  img
+    width: auto
+  span
+    color: $black !important
+math,mfrac,mrow
+  font-weight: 900
+  font-size: small !important
+  font-family: "Roboto", sans-serif
+.tabla-b td,.tabla-b th
+  border: 1px solid #a89e9e
