--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -136,3 +136,13 @@ math,mfrac,mrow
   font-family: "Roboto", sans-serif
 .tabla-b td,.tabla-b th
   border: 1px solid #a89e9e
+
+  
+@media only screen and (width: 768px) 
+  .col-ipad
+    margin-right: 5rem !important
+    width: 80%
+@media only screen and (width: 390px) 
+  .col-ipad
+    margin-right: 5rem !important
+    width: 80%
